aligned close button in mobile navigation (375px) and added some corrections in mobile styling (margins to classes name and occupation)

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -419,8 +419,8 @@ footer {
     background-color: transparent;
     font-size: 1.2rem;
     position: fixed;
-    top: -.1vw;
-    right: .4vw;
+    top: 2vw;
+    right: 0vw;
     z-index: 20;
 }
 
@@ -444,6 +444,9 @@ footer {
     main,
     .main--content {
         display: block;
+    }
+    #container {
+        padding: 1.2rem 1.2rem;
     }
     header {
         align-content: space-between;
@@ -471,7 +474,7 @@ footer {
     }
     .menu-button {
         display: block;
-        position: fixed;
+        position: flex;
         border: none;
         top: 4vw;
         right: 4vw;
@@ -500,10 +503,10 @@ footer {
         margin: 0rem 0rem 0rem 0.3rem;
     }
     .nameA {
-        margin: 1rem 0rem 1rem -4.5rem;
+        margin: 1rem 0rem 1rem -4.4rem;
     }
     .occupation {
-        margin: -2em 0rem 0rem -4.5rem;
+        margin: -.95rem 0rem 0rem -4.45rem;
     }
     .designed--by {
         font-size: 1.1rem;
